objects/dbu_Emailer__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Contact_Email__c</fullName>
        <description>Email of the respective contact</description>
        <inlineHelpText>Email of the respective contact</inlineHelpText>
        <label>dbu_Contact_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dbu_Contact_Name__c</fullName>
        <formula>dbu_Email_Contact__r.FirstName + &apos; &apos; +  dbu_Email_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dbu_Contact_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Email_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dbu_Email_Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>dbu Emailer</relationshipLabel>
        <relationshipName>dbu_Emailer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Email_Sending_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Email_Sending_Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if email is sent to user</description>
        <inlineHelpText>Checked if email is sent to user</inlineHelpText>
        <label>dbu_Email_Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Email_for_NotifyMe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox if checked denotes the record is created for the NotifyMe functionality in the PDP page</description>
        <inlineHelpText>This checkbox if checked denotes the record is created for the NotifyMe functionality in the PDP page</inlineHelpText>
        <label>dbu_Email_for_NotifyMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Email_for_Wishlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Email_for_Wishlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Store_Country__c</fullName>
        <label>dbu_Store_Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Store_Language__c</fullName>
        <label>dbu_Store_Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Wishlist_Country__c</fullName>
        <label>dbu_Wishlist_Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Wishlist_Language__c</fullName>
        <label>dbu_Wishlist_Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu Emailer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_Email_for_NotifyMe__c</columns>
        <columns>dbu_Contact_Name__c</columns>
        <columns>dbu_Contact_Email__c</columns>
        <columns>dbu_Email_Sending_Initiated__c</columns>
        <columns>dbu_Email_Sent__c</columns>
        <columns>dbu_Store_Language__c</columns>
        <columns>dbu_Store_Country__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>dbu _Emailer_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu Emailer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>